policy-definition.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-traffic-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: mysql
      app: myapp
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: myapp
          tier: backend
    ports:
    - protocol: TCP
      port: 3306
